Try improving static file detection

--- a/app/Dockerfile.prod
+++ b/app/Dockerfile.prod
@@ -29,7 +29,9 @@ RUN --mount=type=cache,target=/root/.cache/uv \
 COPY Makefile Makefile
 COPY eventyay/static/npm_dir eventyay/static/npm_dir
 # Run npm stuff
-RUN make npminstall
+RUN mkdir eventyay/static/node_prefix/
+RUN cp -r eventyay/static/npm_dir/* eventyay/static/node_prefix/
+RUN npm install --prefix=eventyay/static/node_prefix
 
 #########
 # FINAL #
@@ -52,7 +54,7 @@ RUN mkdir $APP_HOME/static
 WORKDIR $APP_HOME
 
 # install dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends netcat-traditional
+RUN apt-get update && apt-get install -y --no-install-recommends netcat-traditional nodejs
 
 # copy entrypoint.prod.sh
 COPY ./entrypoint.prod.sh .
@@ -68,7 +70,7 @@ RUN chown -R app:app $APP_HOME
 # Copy the Python environment from the builder
 # Note: The venv path in the builder must match the one in runner.
 COPY --from=builder --chown=app:app $APP_HOME/.venv $APP_HOME/.venv
-COPY --from=builder --chown=app:app $APP_HOME/eventyay/static.dist/node_prefix $APP_HOME/eventyay/static.dist/node_prefix
+COPY --from=builder --chown=app:app $APP_HOME/eventyay/static/node_prefix $APP_HOME/eventyay/static/node_prefix
 
 # change to the app user
 USER app
