Fix Redirection Issues

--- a/app/eventyay.cfg
+++ b/app/eventyay.cfg
@@ -1,7 +1,7 @@
 [eventyay]
 instance_name=eventyay
 #url=https://app.eventyay.com/tickets
-url=http://next.eventyay.com
+url=https://next.eventyay.com
 currency=USD
 ; DO NOT change the following value, it has to be set to the location of the
 ; directory *inside* the docker container
@@ -9,8 +9,8 @@ datadir=/data
 trust_x_forwarded_for=on
 trust_x_forwarded_proto=on
 registration=on
-talk_hostname=https://app.eventyay.com/talk/
-video_server_hostname=https://app.eventyay.com:8443
+talk_hostname=https://next.eventyay.com
+video_server_hostname=https://next.eventyay.com:8443
 base_path=/tickets
 
 [urls]
