--- a/app/eventyay/frontend/schedule-editor/package.json
+++ b/app/eventyay/frontend/schedule-editor/package.json
@@ -6,43 +6,54 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "lint": "npm run lint:eslint && npm run lint:stylelint",
-    "lint:eslint": "eslint . --ext .js,.vue",
+    "preview": "vite preview",
+    "lint": "npm run lint:eslint && npm run lint:stylelint && npm run lint:tsc",
+    "lint:eslint": "eslint src --ext .js,.ts,.vue",
     "lint:stylelint": "stylelint \"**/*.{styl,vue}\"",
+    "lint:tsc": "tsc --noEmit",
     "i18n:extract": "npx i18next-parser 'src/**/*.vue' -c i18next-parser.config.cjs",
-    "i18n:convert2gettext": "i18next-conv -l en -s locales/en/translation.json -t locales/en/translation.po",
+    "i18n:convert2gettext": "i18next-conv -K -l en -s locales/en/translation.json -t locales/en/translation.po",
     "test": "echo \"Error: no test specified\" && exit 1",
     "analyze": "ANALYZE=true npm run build",
-    "prepublishOnly": "npm run build:lib"
+    "prepublishOnly": "npm run build"
   },
   "type": "module",
   "main": "dist/schedule-editor.common.js",
   "dependencies": {
     "buntpapier": "^2.0.0-alpha.25",
     "i18next": "^22.4.8",
-    "lodash": "^4.17.20",
-    "markdown-it": "^12.1.0",
-    "moment": "^2.27.0",
-    "moment-locales-webpack-plugin": "^1.2.0",
-    "moment-timezone": "^0.5.31",
-    "moment-timezone-data-webpack-plugin": "^1.3.0",
+    "lodash": "^4.17.21",
+    "markdown-it": "^13.0.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "process": "^0.11.10",
-    "vue": "^3.3.4",
-    "vue-template-compiler": "^2.7.14"
+    "vue": "^3.5.17",
+    "zod": "^4.0.10"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.2.3",
-    "eslint": "^8.20.0",
-    "eslint-plugin-vue": "^9.2.0",
+    "@types/lodash": "^4.14.202",
+    "@types/markdown-it": "^12.2.3",
+    "@types/node": "^20.19.9",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "@vue/eslint-config-typescript": "^14.6.0",
+    "@vue/tsconfig": "^0.4.0",
+    "eslint": "^9.0.0",
+    "eslint-plugin-vue": "^9.25.0",
     "eslint-plugin-vue-pug": "^0.5.4",
-    "i18next-conv": "^14.0.0",
-    "i18next-parser": "^9.0.1",
+    "i18next-conv": "^15.1.1",
+    "i18next-parser": "^9.0.0",
     "pug": "^3.0.3",
-    "stylelint-config-standard": "^26.0.0",
-    "stylelint-plugin-stylus": "^0.16.1",
-    "stylus": "^0.54.7",
-    "vite": "^4.5.14",
-    "vite-bundle-visualizer": "^0.10.0"
+    "stylelint": "^16.3.1",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-plugin-stylus": "^1.0.0",
+    "stylus": "^0.63.0",
+    "typescript": "^5.3.3",
+    "vite": "^6.3.5",
+    "vite-bundle-visualizer": "^0.10.0",
+    "vite-plugin-checker": "^0.10.1",
+    "vue-tsc": "^2.0.8"
   },
   "bugs": {
     "url": "https://github.com/pretalx/schedule-editor/issues"
