--- a/app/eventyay.cfg
+++ b/app/eventyay.cfg
@@ -37,16 +37,15 @@ tls = True
 ssl = False
 
 # redis stream:
-# 0 and 1 and 2 are used by eventyay-talk
-#[redis]
-#location=redis://eventyay-redis/3
-#; Remove the following line if you are unsure about your redis' security
-#; to reduce impact if redis gets compromised.
-#sessions=true
+[redis]
+location=redis://eventyay-next-redis/0
+; Remove the following line if you are unsure about your redis' security
+; to reduce impact if redis gets compromised.
+sessions=true
 
-#[celery]
-#backend=redis://eventyay-redis/4
-#broker=redis://eventyay-redis/5
+[celery]
+backend=redis://eventyay-next-redis/1
+broker=redis://eventyay-next-redis/2
 
 [django]
 secret=CHANGEME
