--- a/app/eventyay.cfg
+++ b/app/eventyay.cfg
@@ -1,7 +1,8 @@
 [eventyay]
 instance_name=eventyay
 #url=https://app.eventyay.com/tickets
-url=https://next.eventyay.com
+# For local development, point SITE_URL to local server; change back to production when deploying
+url=http://127.0.0.1:8000
 currency=USD
 ; DO NOT change the following value, it has to be set to the location of the
 ; directory *inside* the docker container
@@ -9,8 +10,8 @@ datadir=/data
 trust_x_forwarded_for=on
 trust_x_forwarded_proto=on
 registration=on
-talk_hostname=https://next.eventyay.com
-video_server_hostname=https://next.eventyay.com:8443
+talk_hostname=https://app.eventyay.com/talk/
+video_server_hostname=https://app.eventyay.com:8443
 base_path=/tickets
 
 [urls]
@@ -37,15 +38,16 @@ tls = True
 ssl = False
 
 # redis stream:
-[redis]
-location=redis://eventyay-next-redis/0
-; Remove the following line if you are unsure about your redis' security
-; to reduce impact if redis gets compromised.
-sessions=true
+# 0 and 1 and 2 are used by eventyay-talk
+#[redis]
+#location=redis://eventyay-redis/3
+#; Remove the following line if you are unsure about your redis' security
+#; to reduce impact if redis gets compromised.
+#sessions=true
 
-[celery]
-backend=redis://eventyay-next-redis/1
-broker=redis://eventyay-next-redis/2
+#[celery]
+#backend=redis://eventyay-redis/4
+#broker=redis://eventyay-redis/5
 
 [django]
 secret=CHANGEME
