--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -139,6 +139,7 @@ dependencies = [
     "openpyxl>=3.1.5",
     "orjson>=3.10.18",
     "packaging>=25.0",
+    "pandas>=2.3.3",
     "pdf2image>=1.17.0",
     "pdfrw>=0.4",
     "pep8-naming>=0.14.1",
