--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -126,6 +126,7 @@ dependencies = [
     "libsass>=0.23.0",
     "lxml>=5.4.0",
     "markdown>=3.7",
+    "markdownify>=1.2.0",
     "matplotlib>=3.10.3",
     "maxminddb>=2.6.3",
     "mccabe>=0.7.0",
