Add webapp build step to Docker image build process

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -33,5 +33,9 @@ ENV PATH="/usr/src/app/.venv/bin:$PATH"
 # Run npm stuff
 RUN make npminstall
 
+# Build webapp
+RUN npm install --prefix=eventyay/webapp
+RUN npm run build --prefix=eventyay/webapp
+
 # run entrypoint.sh
 ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
