Fix: Color codes are mixed in logging

--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -281,6 +281,7 @@ ignore = ["E722", "E741"]
 "**/__init__.py" = ["F401"]
 # These files have long lines.
 "**/migrations/*.py" = ["E501"]
+"eventyay/config/settings.py" = ["E402"]
 
 [tool.setuptools]
 packages = ["eventyay"]
