Add webapp build step to Docker image build process (#1090)
* Add webapp build step to Docker image build process

* using makefile

* docker prod add

* conflict resolve

* line added back

* webapp build to \static

* update volume location

---------

Co-authored-by: Mario Behling <mb@mariobehling.de>

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -33,5 +33,8 @@ ENV PATH="/usr/src/app/.venv/bin:$PATH"
 # Run npm stuff
 RUN make npminstall
 
+# Build webapp
+RUN make webappbuild
+
 # run entrypoint.sh
 ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
