--- a/app/Dockerfile.prod
+++ b/app/Dockerfile.prod
@@ -35,6 +35,10 @@ RUN OUT_DIR=/home/app/web/eventyay/static npm run build --prefix=eventyay/fronte
 COPY eventyay/frontend/schedule-editor eventyay/frontend/schedule-editor
 RUN npm ci --prefix=eventyay/frontend/schedule-editor
 RUN OUT_DIR=/home/app/web/eventyay/static npm run build --prefix=eventyay/frontend/schedule-editor
+# webapp
+COPY eventyay/webapp eventyay/webapp
+RUN npm install --prefix=eventyay/webapp
+RUN OUT_DIR=/home/app/web/eventyay/static npm run build --prefix=eventyay/webapp
 
 
 #########
@@ -76,6 +80,7 @@ RUN chown -R app:app $APP_HOME
 COPY --from=builder --chown=app:app $APP_HOME/.venv $APP_HOME/.venv
 COPY --from=builder --chown=app:app $APP_HOME/eventyay/static/global-nav-menu $APP_HOME/eventyay/static/global-nav-menu
 COPY --from=builder --chown=app:app $APP_HOME/eventyay/static/schedule-editor $APP_HOME/eventyay/static/schedule-editor
+COPY --from=builder --chown=app:app $APP_HOME/eventyay/static/webapp $APP_HOME/eventyay/static/webapp
 
 # change to the app user
 USER app
