--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -19,6 +19,23 @@ services:
       - db
       - redis
 
+  websocket:
+    image: eventyay/eventyay-next:enext
+    container_name: eventyay-next-websocket
+    command: daphne -b 0.0.0.0 -p 8001 eventyay.config.routing:application
+    volumes:
+      - ./data/data:/data
+      - ./eventyay.cfg:/etc/eventyay.cfg:ro
+    ports:
+      - 8001:8001
+    expose:
+      - 8001
+    env_file:
+      - ./.env
+    depends_on:
+      - db
+      - redis
+
   worker:
     image: eventyay/eventyay-next:enext
     container_name: eventyay-next-worker
