--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
       - /usr/src/app/eventyay/webapp/node_modules
     env_file:
       - ./.env.dev
+    environment:
+      - MPLCONFIGDIR=/tmp/matplotlib
     depends_on:
       - db
       - redis
